# learning-opencl

./: CMakeLists.txt  README.md
src/matrix-vector-mult/: main.cc  matvec.cl
src/oclinfo/: main.cc
